Bug 1849271 - Flip test when checking for the presence of optional colorspace members on a VideoDecoderConfig. r=media-playback-reviewers,alwu

Differential Revision: https://phabricator.services.mozilla.com/D186530