.eslintrc-test-paths.js
@@ -316,6 +316,7 @@ const extraMochitestTestPaths = [
   "dom/media/mediasource/test/",
   "dom/media/test/",
   "dom/media/webcodecs/test/",
+  "dom/media/webcodecs/crashtests/",
   "dom/media/webspeech/recognition/test/",
   "dom/media/webspeech/synth/test/",
   "dom/messagechannel/tests/",
